# Ecommerce3

./: .gitignore  README.md  pyproject.toml
ecommerce3/: settings.py
ecommerce3/ecommerceapp/: model.py
ecommerce3/ecommerceapp/util/: loader.py  validator.py
ecommerce3/files/: categories.json  clients.json  preferences.json  products.json
ecommerce3/tests/test_ecommerceapp/: test_model.py
ecommerce3/tests/test_ecommerceapp/test_util/: test_loader.py  test_validator.py
ecommerce3/tests/test_validator/: test_integer.py
ecommerce3/tests/tests_files/: test_correct_clients.json
ecommerce3/validator/: integer.py
