[tool.poetry]
name = "ecommerce 3"
version = "0.1.0"
description = "Simple ecommerce service"
authors = ["Smolke <d.smolczynski1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
